<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imv_donvi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/txt_emaildonvi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_sdt"
                android:layout_toEndOf="@id/imv_donvi"
                android:padding="10dp"
                android:text="@string/email_don_vi" />

            <TextView
                android:id="@+id/txt_sdt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_tendv"
                android:layout_toEndOf="@id/imv_donvi"
                android:padding="10dp"
                android:text="@string/sdt_donvi" />

            <TextView
                android:id="@+id/txt_tendv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imv_donvi"
                android:padding="10dp"
                android:text="@string/ten_dv" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>